--- a/proyecto/loginEstud.html
+++ b/proyecto/loginEstud.html
@@ -40,7 +40,7 @@
 									<div class="text-center">
 										<img src="img/avatars/Iconocotecnova.png" alt="Cotecnova" class="img-fluid rounded-circle" width="132" height="132" />
 									</div>
-									<form action="controlador/loginAdmon.php" method="POST">
+									<form action="controlador/loginEstud.php" method="POST">
 										<div class="mb-3">
 											<label class="form-label">Numero de Documento</label>
 											<input class="form-control form-control-lg" type="text" name="DNI" placeholder="Ingrese su numero de documento" />
