--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -26,37 +26,36 @@
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-        <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+        <li><a href="index.html" class="nav-link px-2 link-secondary">Prestamos</a></li>
+        <li><a href="https://www.cotecnova.edu.co" class="nav-link px-2 link-dark">Cotecnova</a></li>
+        <li><a href="http://www.avaco.appcotecnova.es" class="nav-link px-2 link-dark">Avaco</a></li>
+        <li><a href="https://www.cotecnova.edu.co/index.php/library/" class="nav-link px-2 link-dark">Biblioteca</a></li>
+        <li><a href="https://www.cotecnova.edu.co/index.php/contactenos/" class="nav-link px-2 link-dark">Contactanos</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-success me-2">Login</button>
-        <button type="button" class="btn btn-success">Sign-up</button>
+        <a type="button" href="loginEstud.html" class="btn btn-outline-success me-2">Estudiante</a>
+        <a type="button" href="loginAdmon.html" class="btn btn-success">Administrativo</a>
       </div>
     </header>
   </div>
 
-	<a href="loginAdmon.html">Login Administrador</a>
-	<a href="loginEstud.html">Login Estudiante</a>
+<center><img src="img/photos/quepro.jpg" width="50%"></center>
 
 	<div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-4 mb-0 text-muted">&copy; 2021 Company, Inc</p>
+    <p class="col-md-4 mb-0 text-muted">&copy; 2021 COTECNOVA</p>
 
     <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
       <img class="bi me-2" width="50"  src="img/avatars/Iconocotecnova.png"></img>
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Prestamos</a></li>
+      <li class="nav-item"><a href="https://www.cotecnova.edu.co" class="nav-link px-2 text-muted">Cotecnova</a></li>
+      <li class="nav-item"><a href="http://www.avaco.appcotecnova.es" class="nav-link px-2 text-muted">Avaco</a></li>
+      <li class="nav-item"><a href="https://www.cotecnova.edu.co/index.php/library/" class="nav-link px-2 text-muted">Biblioteca</a></li>
+      <li class="nav-item"><a href="https://www.cotecnova.edu.co/index.php/contactenos/" class="nav-link px-2 text-muted">Contáctenos</a></li>
     </ul>
   </footer>
 </div>
